--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -84,11 +84,16 @@
 			<version>3.2.0</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>dev.langchain4j</groupId>
+			<artifactId>langchain4j</artifactId>
+			<version>0.23.0</version>
 		</dependency>
 
 
