--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -108,7 +108,11 @@
 			<version>0.24.0</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.3</version>
+		</dependency>
 
 	</dependencies>
 
